# fastapi_project

./: .breakpoints  .gitignore  Pipfile  README.md  main.py  pyproject.toml
