[tool.poetry]
name = "fastapiproject-2"
version = "0.1.0"
description = ""
authors = ["ShriekDj <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
pipenv = "^2022.1.8"
pydantic = "^1.9.0"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
